--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,84 @@
-.App {
-  text-align: center;
+:root{
+  --mainBlue:#2a2a72;
+  --lightBlue:#009ffd;
+  --mainWhite:#f3f3f3;
+  --mainDark:#232528;
+  --mainYellow:#ffa400;
+  --colss:5;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+body{
+
+font-family: "Oswald", sans-serif !important;
+background: var(--mainWhite) !important ;
+color: var(--mainDark) !important ; /* this for text color */ 
+}
+/* this class title for titles , withou important because its m
+my class i will create it
+*/ 
+.text-title{
+  font-family: "Permanent Marker", cursive;
+  letter-spacing: 0.3rem;
+  text-transform: uppercase ;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.text-blue{
+  color: var(--mainBlue) ;
+}
+.text-bright{
+  color: var(--lightBlue) ;
+}
+.box {
+  background-color: #444;
+  color: #fff;
+   
+  padding: 0px;
+  font-size: 150%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+   
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+.wrapper{
+  
+    display: grid;
+    grid-gap: 1px;
+    /*grid-template-columns: repeat(auto-fit, minmax(110px,1fr));
+    */
+    grid-template-columns: repeat(1, auto);
+    margin-left: 5rem;
+    margin-right: 5rem;
+    margin-top: 5rem;
   }
-  to {
-    transform: rotate(360deg);
+
+  @media (min-width: 1000px){
+    .wrapper{
+
+      grid-template-columns: repeat(4, auto);
+ 
+    }
   }
-}
+  @media (min-width: 600px){
+    .wrapper{
+
+      grid-template-columns: repeat(2, auto);
+ 
+    }
+  }
+  @media (min-width: 800px){
+    .wrapper{
+
+      grid-template-columns: repeat(var(--colss), auto);
+ 
+    }
+  }
+  @media (min-width: 1100px){
+    .wrapper{
+
+      grid-template-columns: repeat(var(--colss), auto);
+ 
+    }
+  }
